feat(lsp): add inlay hints with type inference
Add LSP textDocument/inlayHint support with basic type inference:

Types package additions:
- builtins.go: Return types for Starlark builtins (len, str, range, etc.)
- inference.go: Type inference for literals, collections, calls, binary ops

LSP inlay hints:
- Define local InlayHint/InlayHintKind/InlayHintParams types (LSP 3.17)
  since go.lsp.dev/protocol v0.12.0 only supports LSP 3.15.3
- Show inferred types for variable assignments
- Support explicit type comments (# type: T)
- Parse Google-style docstring Args for parameter types
- Configurable: hide single-char names, max hint length

The local type definitions follow gopls's approach of generating/defining
protocol types internally rather than relying on external libraries.

--- a/internal/types/BUILD.bazel
+++ b/internal/types/BUILD.bazel
@@ -3,18 +3,23 @@ load("@rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "types",
     srcs = [
+        "builtins.go",
+        "inference.go",
         "parser.go",
         "typeref.go",
     ],
     importpath = "github.com/albertocavalcante/sky/internal/types",
     visibility = ["//:__subpackages__"],
+    deps = ["@com_github_bazelbuild_buildtools//build"],
 )
 
 go_test(
     name = "types_test",
     srcs = [
+        "inference_test.go",
         "parser_test.go",
         "typeref_test.go",
     ],
     embed = [":types"],
+    deps = ["@com_github_bazelbuild_buildtools//build"],
 )
