--- a/internal/lsp/BUILD.bazel
+++ b/internal/lsp/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "codeaction.go",
         "folding.go",
+        "inlayhints.go",
         "jsonrpc.go",
         "links.go",
         "provider.go",
@@ -29,6 +30,7 @@ go_library(
         "//internal/starlark/linter",
         "//internal/starlark/linter/buildtools",
         "//internal/starlark/query/index",
+        "//internal/types",
         "@com_github_bazelbuild_buildtools//build",
         "@dev_lsp_go_protocol//:protocol",
     ],
@@ -40,6 +42,8 @@ go_test(
         "builtins_integration_test.go",
         "codeaction_test.go",
         "completion_test.go",
+        "inlayhints_integration_test.go",
+        "inlayhints_test.go",
         "jsonrpc_test.go",
         "provider_test.go",
         "references_test.go",
@@ -55,6 +59,7 @@ go_test(
         "//internal/starlark/checker",
         "//internal/starlark/filekind",
         "//internal/starlark/linter",
+        "@com_github_bazelbuild_buildtools//build",
         "@dev_lsp_go_protocol//:protocol",
         "@net_starlark_go//syntax",
     ],
