--- a/docs-website/package.json
+++ b/docs-website/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.6.1",
     "sharp": "^0.34.5",
     "starlight-links-validator": "^0.19.2",
+    "starlight-sidebar-orphan-pages": "github:albertocavalcante/starlight-sidebar-orphan-pages",
     "tailwindcss": "^4.1.18"
   }
 }
