chore(docs-website): update to scoped package @albertocavalcante/starlight-sidebar-orphan-pages

--- a/docs-website/package.json
+++ b/docs-website/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@albertocavalcante/starlight-sidebar-orphan-pages": "github:albertocavalcante/starlight-sidebar-orphan-pages",
     "@astrojs/sitemap": "^3.7.0",
     "@astrojs/starlight": "^0.37.6",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.6.1",
     "sharp": "^0.34.5",
     "starlight-links-validator": "^0.19.2",
-    "starlight-sidebar-orphan-pages": "github:albertocavalcante/starlight-sidebar-orphan-pages",
     "tailwindcss": "^4.1.18"
   }
 }
