--- a/docs-website/package.json
+++ b/docs-website/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@albertocavalcante/starlight-sidebar-orphan-pages": "github:albertocavalcante/starlight-sidebar-orphan-pages",
+    "@albertocavalcante/starlight-sidebar-orphan-pages": "github:albertocavalcante/starlight-plugins#path:packages/sidebar-orphan-pages",
     "@astrojs/sitemap": "^3.7.0",
     "@astrojs/starlight": "^0.37.6",
     "@tailwindcss/vite": "^4.1.18",
