--- a/docs/website/package.json
+++ b/docs/website/package.json
@@ -14,6 +14,7 @@
     "@astrojs/starlight": "^0.37.6",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.6.1",
+    "astro-d2": "^0.8.1",
     "sharp": "^0.34.5",
     "starlight-links-validator": "^0.19.2",
     "tailwindcss": "^4.1.18"
