feat(lsp): migrate to generated LSP 3.17 protocol types
Replace go.lsp.dev/protocol v0.12.0 (LSP 3.15.3, frozen since 2020)
with lspls-generated types from the official LSP 3.17 specification.

Changes:
- Add internal/protocol package with generated LSP 3.17 types
- Update all LSP imports from go.lsp.dev/protocol to internal/protocol
- Adapt to new naming conventions (e.g., CodeActionKindQuickFix)
- Remove manual InlayHint type definitions (now in spec)
- Remove 8 transitive dependencies (zap, jsonrpc2, etc.)

Benefits:
- Native InlayHint support (LSP 3.16+)
- Improved semantic tokens
- Version-controlled protocol types
- 75% coverage of full LSP 3.17 spec (339 types)

Generated with: lspls -v release/protocol/3.17.6-next.14

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,6 +3,7 @@
 # gazelle:build_file_name BUILD.bazel
 # gazelle:go_naming_convention import
 load("@gazelle//:def.bzl", "gazelle")
+load("@rules_copybara//:copybara.bzl", "copybara_validate")
 
 # Run gazelle for the entire workspace:
 #   bazel run //:gazelle
@@ -21,4 +22,16 @@ alias(
     name = "format.check",
     actual = "//tools/format:format.check",
     visibility = ["//visibility:public"],
+)
+
+# Validate Copybara config (dogfooding rules_copybara)
+# Run: bazel build //:copybara_validate
+copybara_validate(
+    name = "copybara_validate",
+    config = "copy.bara.sky",
+    tags = [
+        "manual",            # Exclude from //... wildcards
+        "requires-network",  # Needs network for git origin resolution
+        "no-sandbox",        # Disable sandbox for git access
+    ],
 )
