--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v -race -timeout 10m ./...
+        run: go tool -modfile=tools/testsum/go.mod gotestsum --format pkgname-and-test-fails --jsonfile test-output.json -- -race -timeout 10m ./...
 
   # ===========================================================================
   # Job 2: Bazel Build & Test (primary build system)
